--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ import {
 
 // --- CONFIGURATION EXTERNE ---
 // REMPLACEZ CETTE URL PAR VOTRE WEBHOOK N8N
-const N8N_WEBHOOK_URL = "https://esmieunathan.app.n8n.cloud/webhook-test/e19ae4b2-a192-4512-9e5f-b03d0580be78"; 
+const N8N_WEBHOOK_URL = ""; 
 
 const DEFAULT_CONFIG = {
   companyName: "Nexus AI",
