--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         const { useState, useEffect, useRef, useCallback } = React;
 
         // --- CONFIGURATION EXTERNE ---
-        const N8N_WEBHOOK_URL = ""; 
+        const N8N_WEBHOOK_URL = "https://esmieunathan.app.n8n.cloud/webhook/e19ae4b2-a192-4512-9e5f-b03d0580be78"; 
 
         const DEFAULT_CONFIG = {
             companyName: "Nexus AI",
